--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "express": "^4.17.1",
     "express-handlebars": "^5.2.0",
     "express-session": "^1.17.1",
+    "firebase": "^10.7.1",
+    "firebase-admin": "^12.0.0",
     "handlebars": "^4.7.6",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^2.2.5",
